# DucksDemo

./: CMakeLists.txt  main.cpp
Behaviors/Fly/: IFlyBehavior.cpp  IFlyBehavior.h  NoFly.cpp  NoFly.h  SimpleFly.cpp  SimpleFly.h
Ducks/: Duck.cpp  Duck.h  GoldenDuck.cpp  GoldenDuck.h  RubberDuck.cpp  RubberDuck.h  SimpleDuck.cpp  SimpleDuck.h  WoodenDuck.cpp  WoodenDuck.h
